--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,32 @@
 body {
     margin:0;
-    font-family: "sans-serif";
+    font-family: sans-serif;
+    font-size: 12px;
+}
+
+button { cursor: pointer }
+
+.Topbar {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    gap: 10px;
+    padding: 10px;
+}
+
+.Accordion,
+.collapsible,
+.LeftPanel {
+    display: flex;
+    flex-direction: column;
+}
+
+.LeftPanel {
+    width: 200px;
+}
+
+.collapsible {
+    button {
+        display: flex;
+    }
 }
